fixing sizing and adjusting spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,12 +10,8 @@ a {
   color: white;
 }
 
-h1 {
-  font-size: 200px;
-}
-
 p {
-  font-size: 30px;
+  font-size: 24px;
   display: block;
   margin: 30px auto;
 }
